fj/src/test/resources/scope-paper/constructor1.expected
src/test/resources/scope-paper/constructor1.fj:3:3:error: constructor name B is not class name A
  B() {
  ^
