fj/src/test/resources/scope-paper/constructor1.fj
// class/constructors.spt:wrong constructor name
class A extends Object {
  B() {
    super();
  }
}
